# manageback-mcp

./: .env.example  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: managebac.example.yaml
scripts/: wait_for_mysql.py
skills/managebac-mcp-server/: SKILL.md
skills/managebac-mcp-server/agents/: openai.yaml
src/managebac_mcp/: __init__.py  browser.py  config.py  db.py  errors.py  main.py  repositories.py  schema.py  server.py  services.py  types.py
tests/: test_config.py  test_services.py
